# backpy

./: .1347901612_index  .androidSkipFolders  .gitignore  .travis.yml  PKGBUILD  PKGBUILD~  README.md  backpy.man  backpy.man~  backpy.py  backpy.py~  backup.lst  pyproject.toml  setup.cfg  setup.py
.1347807541index/: .index
.github/workflows/: main.yml
backpy/: __init__.py  backpy.py  backup.py  file_index.py  helpers.py  logger.py
backpy_tests/: __init__.py  adb.py  adb_test.py  backup.py  backup_test.py  common.py  config_file.py  config_file_test.py  helpers_test.py  index_test.py  restore.py  restore_test.py
htmlcov/: _usr_bin_nosetests.html  _usr_local_lib_python2_7_dist-packages_pkg_resources___init___py.html  _usr_local_lib_python2_7_dist-packages_pkg_resources__vendor___init___py.html  _usr_local_lib_python2_7_dist-packages_pkg_resources__vendor_packaging___about___py.html  _usr_local_lib_python2_7_dist-packages_pkg_resources__vendor_packaging___init___py.html  _usr_local_lib_python2_7_dist-packages_pkg_resources__vendor_packaging__compat_py.html  _usr_local_lib_python2_7_dist-packages_pkg_resources__vendor_packaging__structures_py.html  _usr_local_lib_python2_7_dist-packages_pkg_resources__vendor_packaging_markers_py.html  _usr_local_lib_python2_7_dist-packages_pkg_resources__vendor_packaging_requirements_py.html  _usr_local_lib_python2_7_dist-packages_pkg_resources__vendor_packaging_specifiers_py.html  _usr_local_lib_python2_7_dist-packages_pkg_resources__vendor_packaging_version_py.html  _usr_local_lib_python2_7_dist-packages_pkg_resources__vendor_pyparsing_py.html  _usr_local_lib_python2_7_dist-packages_pkg_resources__vendor_six_py.html  _usr_local_lib_python2_7_dist-packages_pkg_resources_extern___init___py.html  backpy___init___py.html  backpy_backpy_py.html  backpy_backup_py.html  backpy_file_index_py.html  backpy_helpers_py.html  backpy_logger_py.html  backpy_tests___init___py.html  backpy_tests_adb_test_py.html  backpy_tests_backup_test_py.html  backpy_tests_common_py.html  backpy_tests_config_file_test_py.html  backpy_tests_helpers_test_py.html  backpy_tests_index_test_py.html  backpy_tests_restore_test_py.html  index.html  setup_py.html  status.json
resources/: index_147  index_150
resources/dest_files/: .backpy
src/: __init__.py
src/backpy/: __init__.py  backpy.py  file_index.py  logger.py
src/tests/: __init__.py  adb_test.py  backup_test.py  common.py  config_file_test.py  helpers_test.py  index_test.py  restore_test.py
